[package]
name = "test-temporal"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
temporal-sdk-core = { path = "../sdk-core/core" }
temporal-sdk = { path = "../sdk-core/sdk" }
temporal-sdk-core-api = { path = "../sdk-core/core-api" }
temporal-client = { path = "../sdk-core/client" }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"